# StockFlow

./: .gitignore  CMakeLists.txt  README.md  StockFlow.code-workspace  build.ps1  test.ps1
include/: Application.h  Filesystem.h  Inventory.h  Models.h  Storage.h  Utils.h
src/: Application.cpp  Inventory.cpp  Models.cpp  Storage.cpp  Utils.cpp  main.cpp
tests/: tests.cpp
